# github3-utils

./: .bumpversion.cfg  .gitignore  .isort.cfg  .pre-commit-config.yaml  CONTRIBUTING.rst  MANIFEST.in  README.rst  __pkginfo__.py  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  stubs.txt  tox.ini
.github/: actions_deploy_conda.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: conda_ci.yml  docs_test_action.yml  mypy.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
doc-source/: Source.rst  conf.py  contributing.rst  index.rst  license.rst  requirements.txt
doc-source/api/: apps.rst  check_labels.rst  click.rst  github3-utils.rst  secrets.rst  testing.rst
github3_utils/: __init__.py  _typing.py  _typing.pyi  apps.py  check_labels.py  click.py  headers.py  secrets.py  testing.py
tests/: conftest.py  requirements.txt  test_apps.py  test_check_labels.py  test_click.py  test_protect_branch.py  test_rate_limit.py  test_secrets.py  test_testing.py  test_utils.py
tests/cassettes/: rate_limit_exceeded.json  test_check_labels.json  test_creation_on_repo.json  test_get_repos.json  test_get_repos_full.json  test_get_repos_org.json  test_get_secrets.json  test_get_user.json  test_get_user_no_auth.json  test_iter_installed_repos.json  test_protect_branch.json  test_secrets.json  test_testing.json
tests/test_apps_/: test_iter_installed_repos.yml  test_make_footer_links_app_event_date0_.txt  test_make_footer_links_app_event_date1_.txt  (+4 more)
tests/test_utils_/: test_get_repos.yml  (+2 more)
(+6 files in other folders)
